--- a/src/main/resources/templates/client/list.html
+++ b/src/main/resources/templates/client/list.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <title>Clients</title>
 </head>
 <body>
-<h2>Clients</h2>
-<a href="/clients/create">Create client</a>
-<table>
+<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link" href="/">Home </a>
+            <a class="nav-item nav-link" href="/banks/">Bank</a>
+            <a class="nav-item nav-link" href="/credits/">Credits</a>
+            <a class="nav-item nav-link active" href="/clients/">Clients</a>
+        </div>
+    </div>
+</nav>
+<br>
+<a class="btn btn-primary btn-lg btn-block" role="button" href="/clients/create">Create client</a>
+<br>
+<table class="table table-bordered">
     <thead>
-    <tr>
+    <tr class="table-info">
         <th>First name</th>
         <th>Middle name</th>
         <th>Last name</th>
         <th>Mobile phone</th>
         <th>Email</th>
-        <th>Actions</th>
+        <th colspan="2">Actions</th>
     </tr>
     </thead>
     <tbody>
@@ -26,8 +38,8 @@
         <td th:text="${client.mobilePhone}"></td>
         <td th:text="${client.email}"></td>
 
-        <td><a th:href="@{/clients/delete/{id}(id=${client.id})}">Delete</a></td>
-        <td><a th:href="@{/clients/update/{id}(id=${client.id})}">Update</a></td>
+        <td><a class="btn btn btn-outline-success btn-sm" role="button" th:href="@{/clients/update/{id}(id=${client.id})}">Update</a></td>
+        <td><a class="btn btn-outline-danger btn-sm" role="button" th:href="@{/clients/delete/{id}(id=${client.id})}">Delete</a></td>
     </tr>
     </tbody>
 </table>
