--- a/src/main/resources/templates/credit/list.html
+++ b/src/main/resources/templates/credit/list.html
@@ -1,29 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <title>Credits</title>
 </head>
 <body>
-<h2>Credits</h2>
-<a href="/credits/create">Create new credit</a>
-<table>
+<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link" href="/">Home </a>
+            <a class="nav-item nav-link" href="/banks/">Bank</a>
+            <a class="nav-item nav-link active" href="/credits/">Credits</a>
+            <a class="nav-item nav-link" href="/clients/">Clients</a>
+        </div>
+    </div>
+</nav>
+<br>
+<a class="btn btn-primary btn-lg btn-block" role="button" href="/credits/create">Create credit</a>
+<br>
+<table class="table table-bordered">
     <thead>
-    <tr>
+    <tr class="table-info">
         <th>Name</th>
         <th>Limit</th>
         <th>Percent</th>
-        <th>Actions</th>
+        <th colspan="2">Actions</th>
     </tr>
     </thead>
     <tbody>
     <tr th:each="credit : ${credits}">
         <td th:text="${credit.name}"></td>
         <td th:text="${credit.limit}"></td>
-        <td th:text="${credit.percent}"></td>
+        <td th:text="${credit.percent + '%'}"></td>
 
-        <td><a th:href="@{/credits/delete/{id}(id=${credit.id})}">Delete</a></td>
-        <td><a th:href="@{/credits/update/{id}(id=${credit.id})}">Update</a></td>
+        <td><a class="btn btn btn-outline-success btn-sm" role="button" th:href="@{/credits/update/{id}(id=${credit.id})}">Update</a></td>
+        <td><a class="btn btn-outline-danger btn-sm" role="button" th:href="@{/credits/delete/{id}(id=${credit.id})}">Delete</a></td>
+
     </tr>
     </tbody>
 </table>
