--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Main</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<a href="/clients/">Clients</a>
-<a href="/credits/">Credits</a>
-<a href="/banks/">Bank</a>
+
+<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="/">Home </a>
+            <a class="nav-item nav-link" href="/banks/">Bank</a>
+            <a class="nav-item nav-link" href="/credits/">Credits</a>
+            <a class="nav-item nav-link" href="/clients/">Clients</a>
+        </div>
+    </div>
+</nav>
+<br>
+<H3 class="text-center">Test application for Haulmont.</H3>
+<br>
+<h5 class="text-center font-weight-light">Made by Nikita Yarychenko</h5>
 </body>
 </html>
