--- a/src/main/resources/templates/bank/list.html
+++ b/src/main/resources/templates/bank/list.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<h2>Bank</h2>
-<a href="/banks/create">Apply new credit</a>
-<table border="3">
+<nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link" href="/">Home </a>
+            <a class="nav-item nav-link active" href="/banks/">Bank</a>
+            <a class="nav-item nav-link" href="/credits/">Credits</a>
+            <a class="nav-item nav-link" href="/clients/">Clients</a>
+        </div>
+    </div>
+</nav>
+<br>
+<a class="btn btn-primary btn-lg btn-block" role="button" href="/banks/create">Apply new credit</a>
+<br>
+<table class="table table-bordered">
     <thead>
-    <tr>
+    <tr class="table-info">
         <th>Client</th>
         <th>Passport</th>
         <th>Credit</th>
-        <th>Actions</th>
+        <th colspan="3">Actions</th>
     </tr>
     </thead>
     <tbody>
@@ -22,9 +34,9 @@
         <td th:text="${bank.getClient.getPassport}"></td>
         <td th:text="${bank.getCredit.getName}"></td>
 
-        <td><a th:href="@{/banks/delete/{id}(id=${bank.id})}">Delete</a></td>
-        <td><a th:href="@{/banks/update/{id}(id=${bank.id})}">Update</a></td>
-        <td><a th:href="@{/banks/about/{id}(id=${bank.id})}">About</a></td>
+        <td><a class="btn btn-outline-info btn-sm" role="button" th:href="@{/banks/about/{id}(id=${bank.id})}">About</a></td>
+        <td><a class="btn btn btn-outline-success btn-sm" role="button" th:href="@{/banks/update/{id}(id=${bank.id})}">Update</a></td>
+        <td><a class="btn btn-outline-danger btn-sm" role="button" th:href="@{/banks/delete/{id}(id=${bank.id})}">Delete</a></td>
     </tr>
     </tbody>
 </table>
