--- a/src/main/resources/templates/credit-offer/create.html
+++ b/src/main/resources/templates/credit-offer/create.html
@@ -1,21 +1,80 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<h2>Add new credit for client</h2>
-<span th:utext="${creditOffer.credit.limit}"></span>
-<form action="#" th:action="@{/credit-offer/create}" th:object="${creditOffer}" method="post">
+<main>
+    <section class="py-5 text-center container">
+        <div class="container">
 
-    <input type="hidden" th:field="*{id}" id="id">
-    <input type="hidden" th:field="*{client}" id="client">
-    <input type="hidden" th:field="*{credit}" id="credit">
+            <h3 class="row col-md-4">Set sum and months</h3>
+            <br>
 
-    <input th:type = "number" th:max="${creditOffer.credit.limit}" th:field="*{sumCredit}" placeholder="Enter sum credit">
-    <input type = "number" max="120" th:field="*{month}" placeholder="Enter count month">
-    <input type="submit" value="OK">
-</form>
+            <div class="row">
+                <h6 class="col-md-2">Client: </h6>
+                <span th:utext="${creditOffer.client.firstName + ' ' + creditOffer.client.middleName + ' ' + creditOffer.client.LastName}"></span>
+            </div>
+
+            <div class="row">
+                <h6 class="col-md-2">Passport: </h6>
+                <span th:utext="${creditOffer.client.passport}"></span>
+            </div>
+
+            <div class="row">
+                <h6 class="col-md-2">Credit name: </h6>
+                <span th:utext="${creditOffer.credit.name}"></span>
+            </div>
+
+            <div class="row">
+                <h6 class="col-md-2">Limit of credit: </h6>
+                <span th:utext="${creditOffer.credit.limit}"></span>
+            </div>
+
+            <div class="row">
+                <h6 class="col-md-2">Percent of credit: </h6>
+                <span th:utext="${creditOffer.credit.percent}"></span>
+            </div>
+            <br>
+
+            <form action="#" th:action="@{/credit-offer/create}" th:object="${creditOffer}" method="post">
+
+                <input type="hidden" th:field="*{id}" id="id">
+                <input type="hidden" th:field="*{client}" id="client">
+                <input type="hidden" th:field="*{credit}" id="credit">
+
+                <div class="form-group row">
+                    <label class="form-group col-md-2">Sum of credit: </label>
+                    <input class="form-control col-md-4" th:type="number" th:max="${creditOffer.credit.limit}"
+                           th:min="1000" th:field="*{sumCredit}"
+                           placeholder="Enter sum credit">
+                    <div style="color:red" th:if="${#fields.hasErrors('sumCredit')}" th:errors="*{sumCredit}">Sum credit
+                        error
+                    </div>
+                    <br>
+                </div>
+
+                <div class="form-group row">
+                    <label class="form-group col-md-2">Count of months: </label>
+                    <input class="form-control col-md-4" type="number" th:min="1" max="120" th:field="*{month}"
+                           placeholder="Enter count month">
+                    <div style="color:red" th:if="${#fields.hasErrors('month')}" th:errors="*{month}">month error</div>
+                    <br>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-2 col-sm-1 col-xs-1">
+                        <a class="btn btn-danger" href="/banks/">Cancel</a>
+                    </div>
+                    <div>
+                        <input class="btn btn-success" type="submit" value="Create">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
+</main>
 </body>
 </html>
