--- a/src/main/resources/templates/credit/form.html
+++ b/src/main/resources/templates/credit/form.html
@@ -1,30 +1,57 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <title>Create and edit credit</title>
 </head>
 <body>
-<form action="#" th:action="@{/credits/{path}(path=${path})}" th:object="${credit}" method="post">
+<main>
+    <section class="py-5 text-center container">
+        <div class="container">
 
-    <input type="hidden" th:field="*{id}" id="id">
+            <h3 class="row col-md-4"><span th:utext="${'Credit '+ path}"></span></h3>
+            <br>
 
-    <label for="name">Name: </label>
-    <input type="text" th:field="*{name}" id="name" placeholder="Enter name">
-    <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div>
-    <br>
+            <form action="#" th:action="@{/credits/{path}(path=${path})}" th:object="${credit}" method="post">
 
-    <label for="limit">Limit: </label>
-    <input type="number" min="1000" max="1000000000" th:field="*{limit}" id="limit" placeholder="Enter limit">
-    <div style="color:red" th:if="${#fields.hasErrors('limit')}" th:errors="*{limit}">Limit error</div>
-    <br>
+                <input type="hidden" th:field="*{id}" id="id">
 
-    <label for="percent">Percent %: </label>
-    <input type="number" step="0.01" min="0.01" max="99.99" th:field="*{percent}" id="percent" placeholder="Enter percent">
-    <div style="color:red" th:if="${#fields.hasErrors('percent')}" th:errors="*{percent}">Percent error</div>
-    <br>
+                <div class="form-group row">
+                    <label class="form-group col-md-2" for="name">Name: </label>
+                    <input class="form-control col-md-4" type="text" maxlength="30" th:field="*{name}" id="name" placeholder="Enter name">
+                    <div style="color:red" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div>
+                    <br>
+                </div>
 
-    <input type="submit" value="OK">
-</form>
+                <div class="form-group row">
+                    <label class="form-group col-md-2" for="limit">Limit: </label>
+                    <input class="form-control col-md-4" type="number" min="1000" max="1000000000" th:field="*{limit}" id="limit"
+                           placeholder="Enter limit">
+                    <div style="color:red" th:if="${#fields.hasErrors('limit')}" th:errors="*{limit}">Limit error</div>
+                    <br>
+                </div>
+
+                <div class="form-group row">
+                    <label class="form-group col-md-2" for="percent">Percent %: </label>
+                    <input class="form-control col-md-4" type="number" step="0.01" min="0.01" max="99.99" th:field="*{percent}" id="percent"
+                           placeholder="Enter percent">
+                    <div style="color:red" th:if="${#fields.hasErrors('percent')}" th:errors="*{percent}">Percent error
+                    </div>
+                    <br>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-2 col-sm-1 col-xs-1">
+                        <a class="btn btn-danger" href="/credits/">Cancel</a>
+                    </div>
+                    <div>
+                        <input class="btn btn-success" type="submit" th:value="${#strings.capitalize(path)}">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
+</main>
 </body>
 </html>
